; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pem/extr_pem_pkey.c_PEM_read_PrivateKey.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pem/extr_pem_pkey.c_PEM_read_PrivateKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PEM_F_PEM_READ_PRIVATEKEY = common dso_local global i32 0, align 4
@ERR_R_BUF_LIB = common dso_local global i32 0, align 4
@BIO_NOCLOSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PEM_read_PrivateKey(i32* %0, i32** %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = call i32 (...) @BIO_s_file()
  %13 = call i32* @BIO_new(i32 %12)
  store i32* %13, i32** %10, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %4
  %16 = load i32, i32* @PEM_F_PEM_READ_PRIVATEKEY, align 4
  %17 = load i32, i32* @ERR_R_BUF_LIB, align 4
  %18 = call i32 @PEMerr(i32 %16, i32 %17)
  store i32* null, i32** %5, align 8
  br label %32

19:                                               ; preds = %4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* @BIO_NOCLOSE, align 4
  %23 = call i32 @BIO_set_fp(i32* %20, i32* %21, i32 %22)
  %24 = load i32*, i32** %10, align 8
  %25 = load i32**, i32*** %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = call i32* @PEM_read_bio_PrivateKey(i32* %24, i32** %25, i32* %26, i8* %27)
  store i32* %28, i32** %11, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = call i32 @BIO_free(i32* %29)
  %31 = load i32*, i32** %11, align 8
  store i32* %31, i32** %5, align 8
  br label %32

32:                                               ; preds = %19, %15
  %33 = load i32*, i32** %5, align 8
  ret i32* %33
}

declare dso_local i32* @BIO_new(i32) #1

declare dso_local i32 @BIO_s_file(...) #1

declare dso_local i32 @PEMerr(i32, i32) #1

declare dso_local i32 @BIO_set_fp(i32*, i32*, i32) #1

declare dso_local i32* @PEM_read_bio_PrivateKey(i32*, i32**, i32*, i8*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
